Fix db migration (#221)
* fix db configuration

* fix db configuration